; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/executor/extr_nodeMergeAppend.c_heap_compare_slots.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/executor/extr_nodeMergeAppend.c_heap_compare_slots.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, %struct.TYPE_4__*, i32** }
%struct.TYPE_4__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i8*)* @heap_compare_slots to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @heap_compare_slots(i32 %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca %struct.TYPE_5__*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca %struct.TYPE_4__*, align 8
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  %21 = load i8*, i8** %7, align 8
  %22 = bitcast i8* %21 to %struct.TYPE_5__*
  store %struct.TYPE_5__* %22, %struct.TYPE_5__** %8, align 8
  %23 = load i32, i32* %5, align 4
  %24 = call i64 @DatumGetInt32(i32 %23)
  store i64 %24, i64* %9, align 8
  %25 = load i32, i32* %6, align 4
  %26 = call i64 @DatumGetInt32(i32 %25)
  store i64 %26, i64* %10, align 8
  %27 = load %struct.TYPE_5__*, %struct.TYPE_5__** %8, align 8
  %28 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %27, i32 0, i32 2
  %29 = load i32**, i32*** %28, align 8
  %30 = load i64, i64* %9, align 8
  %31 = getelementptr inbounds i32*, i32** %29, i64 %30
  %32 = load i32*, i32** %31, align 8
  store i32* %32, i32** %11, align 8
  %33 = load %struct.TYPE_5__*, %struct.TYPE_5__** %8, align 8
  %34 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %33, i32 0, i32 2
  %35 = load i32**, i32*** %34, align 8
  %36 = load i64, i64* %10, align 8
  %37 = getelementptr inbounds i32*, i32** %35, i64 %36
  %38 = load i32*, i32** %37, align 8
  store i32* %38, i32** %12, align 8
  %39 = load i32*, i32** %11, align 8
  %40 = call i32 @TupIsNull(i32* %39)
  %41 = icmp ne i32 %40, 0
  %42 = xor i1 %41, true
  %43 = zext i1 %42 to i32
  %44 = call i32 @Assert(i32 %43)
  %45 = load i32*, i32** %12, align 8
  %46 = call i32 @TupIsNull(i32* %45)
  %47 = icmp ne i32 %46, 0
  %48 = xor i1 %47, true
  %49 = zext i1 %48 to i32
  %50 = call i32 @Assert(i32 %49)
  store i32 0, i32* %13, align 4
  br label %51

51:                                               ; preds = %86, %3
  %52 = load i32, i32* %13, align 4
  %53 = load %struct.TYPE_5__*, %struct.TYPE_5__** %8, align 8
  %54 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %53, i32 0, i32 0
  %55 = load i32, i32* %54, align 8
  %56 = icmp slt i32 %52, %55
  br i1 %56, label %57, label %89

57:                                               ; preds = %51
  %58 = load %struct.TYPE_5__*, %struct.TYPE_5__** %8, align 8
  %59 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %58, i32 0, i32 1
  %60 = load %struct.TYPE_4__*, %struct.TYPE_4__** %59, align 8
  %61 = load i32, i32* %13, align 4
  %62 = sext i32 %61 to i64
  %63 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %60, i64 %62
  store %struct.TYPE_4__* %63, %struct.TYPE_4__** %14, align 8
  %64 = load %struct.TYPE_4__*, %struct.TYPE_4__** %14, align 8
  %65 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %64, i32 0, i32 0
  %66 = load i32, i32* %65, align 4
  store i32 %66, i32* %15, align 4
  %67 = load i32*, i32** %11, align 8
  %68 = load i32, i32* %15, align 4
  %69 = call i32 @slot_getattr(i32* %67, i32 %68, i32* %18)
  store i32 %69, i32* %16, align 4
  %70 = load i32*, i32** %12, align 8
  %71 = load i32, i32* %15, align 4
  %72 = call i32 @slot_getattr(i32* %70, i32 %71, i32* %19)
  store i32 %72, i32* %17, align 4
  %73 = load i32, i32* %16, align 4
  %74 = load i32, i32* %18, align 4
  %75 = load i32, i32* %17, align 4
  %76 = load i32, i32* %19, align 4
  %77 = load %struct.TYPE_4__*, %struct.TYPE_4__** %14, align 8
  %78 = call i32 @ApplySortComparator(i32 %73, i32 %74, i32 %75, i32 %76, %struct.TYPE_4__* %77)
  store i32 %78, i32* %20, align 4
  %79 = load i32, i32* %20, align 4
  %80 = icmp ne i32 %79, 0
  br i1 %80, label %81, label %85

81:                                               ; preds = %57
  %82 = load i32, i32* %20, align 4
  %83 = call i32 @INVERT_COMPARE_RESULT(i32 %82)
  %84 = load i32, i32* %20, align 4
  store i32 %84, i32* %4, align 4
  br label %90

85:                                               ; preds = %57
  br label %86

86:                                               ; preds = %85
  %87 = load i32, i32* %13, align 4
  %88 = add nsw i32 %87, 1
  store i32 %88, i32* %13, align 4
  br label %51

89:                                               ; preds = %51
  store i32 0, i32* %4, align 4
  br label %90

90:                                               ; preds = %89, %81
  %91 = load i32, i32* %4, align 4
  ret i32 %91
}

declare dso_local i64 @DatumGetInt32(i32) #1

declare dso_local i32 @Assert(i32) #1

declare dso_local i32 @TupIsNull(i32*) #1

declare dso_local i32 @slot_getattr(i32*, i32, i32*) #1

declare dso_local i32 @ApplySortComparator(i32, i32, i32, i32, %struct.TYPE_4__*) #1

declare dso_local i32 @INVERT_COMPARE_RESULT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
